{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "OverworldControls",
            "id": "e585e075-55da-476c-b6f0-9362740db4ce",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "1204f47a-b1da-4805-a7e5-c8c7929eafa4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "49b3427e-d329-4ab1-82ee-f8f1c6b9eb3a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "67429d41-c7cf-42ab-9283-72af3cbcd3c8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8aef0385-7428-44c0-9473-2b1c75d3d84a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7667abff-947a-4f0c-bc5f-3d62105a2003",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c329c0e4-6486-4e39-888b-12d85296b9fe",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "BattleControls",
            "id": "3078add6-d19f-4a3e-931e-79a815aff8df",
            "actions": [
                {
                    "name": "SelectionUp",
                    "type": "Button",
                    "id": "b7291c3e-ffa6-48f8-83a8-73de7cd05d95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectionDown",
                    "type": "Button",
                    "id": "e986b32f-a884-467f-81f7-53ae1626df52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "61189242-8aea-45de-9491-31d1531f7b96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "37757ae6-78e1-45db-b1b5-297e54998bb2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectionUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23dd1276-791e-4a15-beef-7553ae0898f0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectionDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86bb6543-e725-43e1-a968-875d255bd05b",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "0369ba17-b7a4-446a-903b-85cb9cacf7d7",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "6341da6b-2ee5-49df-9feb-682f6eac0b5a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1e4d0bba-6730-4d4f-a894-359534dbd6fd",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}